src/app/brush-table/brush-table.component.scss
/*table {
    width: 100%;
}*/
table input {
    border: none;
    background-color: transparent;
    max-width: 6em;
}
th, td {
    padding: 0.3em;
    max-width: 6em;
}

th input {
    font-weight: bold;
    padding-right: 0.5em;
}
#pager {
    margin-top: 1em;
    margin-bottom: 1em;
}

/* Prevents table header to wrap multiple lines */
/*th {
    white-space: nowrap;
}*/
/* Prevent outline of input when selected */
input:focus{
    outline: none;
}
/* Remove number input spinners */
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}
button {
    font-size: 0.75em;
}

